smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/numbers/negative-with-no-digit.smithy
// Parse error at line 7, column 8 near `)\n`: Invalid number '-': '-' must be followed by a digit
namespace smithy.example

@trait
integer test

@test(-)
string MyString
